# manger_dog

./: .gitignore  Cargo.toml  Trunk.toml
actix-surreal-starter/: Cargo.toml
actix-surreal-starter-macros/: Cargo.toml
actix-surreal-starter-macros/src/: api_entities.rs  validators.rs
actix-surreal-starter/actix-surreal-starter-macros/: Cargo.toml
actix-surreal-starter/actix-surreal-starter-macros/src/: api_entities.rs  lib.rs
actix-surreal-starter/actix-surreal-starter-types/: Cargo.toml
actix-surreal-starter/actix-surreal-starter-types/src/: crud_api.rs  entity.rs  error.rs  global_entities_storage.rs  implementations.rs  lib.rs
actix-surreal-starter/actix-surreal-starter-types/src/pre_built/: mod.rs  validators.rs
actix-surreal-starter/proc_macros/: Cargo.toml
actix-surreal-starter/proc_macros/proc_macro_utils/: Cargo.toml
actix-surreal-starter/proc_macros/proc_macro_utils/src/: lib.rs
actix-surreal-starter/proc_macros/src/: error_enum.rs  error_type.rs  lib.rs
actix-surreal-starter/proc_macros/src/api_entities/: codegen.rs  mod.rs  parsing.rs  syntax_model.rs
actix-surreal-starter/src/: api.rs  authentication.rs  configuration.rs  crud_ops.rs  endpoint_error.rs  helper_implementations.rs  lib.rs  macros.rs  query_builder.rs  server_address.rs  server_starter.rs  session.rs  static_files.rs
actix-surreal-starter/src/crud_api/: crud_impl.rs  crud_traits.rs  entity.rs  error.rs  mod.rs  mtm.rs  otm.rs
actix-surreal-starter/src/pre_built/: regexes.rs  validators.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
server/: .configenv  .env.example  Cargo.toml  schema.surql  static_files_serving_config.json
server/entities/: Cargo.toml
server/entities/src/: lib.rs
server/src/: api.rs  api_datatypes.rs  main.rs  server_setup_helpers.rs
ssg/: config.toml
ssg/content/auth/: index.en.md  index.md
ssg/sass/static/: style.sass
ssg/static/static/: translations.json
ssg/static/static/js/: common-validators.js  form-init.js  init-burger.js  input_field_visuals.js  language-select.js  theme.js  utils.js
ssg/templates/: auth.html  index.html  macros.html
ssg/templates/bases/: static_main.html
ssg/templates/common/: base.html  base_static.html  macros.html
utils/src/: lib.rs
web_client/: Cargo.toml  Trunk.toml  index.html
web_client/.cargo/: config.toml
web_client/src/: access_handler.rs  bindings.rs  config.rs  enums.rs  global_storage.rs  i18n.rs  input_base.rs  inputs.rs  main.rs  navbar.rs  navigation.rs  not_found.rs  page_content.rs  parsing.rs  refresh_request.rs  request.rs  utils.rs
web_client/src/base_components/: mod.rs  page.rs  sidebar.rs  sidebar_nav_item_content.rs
web_client/src/base_hooks/: mod.rs  use_path_state.rs  use_translation.rs
web_client/src/components/: mod.rs  page.rs  sidebar.rs  sidebar_nav_item_content.rs
web_client/src/form_input/: form.rs  generic_input.rs  input_result.rs  inputs.rs  mod.rs
web_client/src/hooks/: mod.rs  use_file.rs  use_path_state.rs
web_client/src/pages/: financial_goals.rs  mod.rs
web_client/web_client_proc_macros/: Cargo.toml
web_client/web_client_proc_macros/src/: lib.rs
zola-watcher/: Cargo.toml
zola-watcher/src/: main.rs
