[package]
name = "actix-surreal-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-files = "0.6.6"
surrealdb = "2.2.1"
rand = "0.9.0"
faker_rand = "0.1.1"
dotenv = "0.15.0"
thiserror = "2.0.12"
tokio = "1.44.1"
uuid = "1.16.0"
bcrypt = "0.17.0"
serde = "1.0.219"
chrono = "0.4.40"
log = "0.4.26"
proc_macros = { path = "../proc_macros" }
serde_json = "1.0.140"
time = "0.3.41"
futures = "0.3.31"
once_cell = "1.21.3"
phf = "0.11.3"