[package]
name = "web_client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo-net = "0.6.0"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
yewdux = "0.11.0"
wasm-cookies = "0.2.1"
once_cell = "1.21"
actix-surreal-types = { path = "../actix-surreal-starter/actix-surreal-starter-types" }
futures = "0.3.31"
serde = "1.0.219"
chrono = "0.4.40"
thiserror = "2.0.12"
wasm-bindgen-futures = "0.4.50"
derive_more = { version = "2.0.1", features = ["display"] }
wee_alloc = "0.4.5"