[package]
name = "web_client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo-net = "0.6.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["CustomEvent", "CustomEventInit", "EventListener", "DomTokenList", "HtmlSelectElement"] }
yewdux = "0.11.0"
wasm-cookies = "0.2.1"
once_cell = "1.21"
actix-surreal-starter-types = { path = "../actix-surreal-starter/actix-surreal-starter-types" }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
thiserror = "2.0.12"
wasm-bindgen-futures = "0.4.50"
derive_more = { version = "2.0.1", features = ["display"] }
wee_alloc = "0.4.5"
js-sys = "0.3.77"
i18nrs = { version = "0.1.5", features = ["yew"] }
entities = { path = "../server/entities" }
console_error_panic_hook = "0.1"
