[package]
name = "actix-surreal-types"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.10.2", optional = true }
serde = { version = "1.0.219", features = ["serde_derive"] }
proc_macros = { path = "proc_macros" }
surrealdb = { version = "2.2.2", optional = true }

[features]
default = []
actix-surreal-impl = ["actix-web", "surrealdb"]