[package]
name = "actix-surreal-starter-types"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.10.2", optional = true }
serde = { version = "1.0.219", features = ["serde_derive"] }
proc_macros = { path = "proc_macros" }
surrealdb = { version = "2.2.2", optional = true }
regex = "1.11.1"
actix-surreal-starter-macros = { path = "../actix-surreal-starter-macros" }
thiserror = "2.0.12"

[features]
default = []
actix-surreal-impl = ["actix-web", "surrealdb"]