[package]
name = "actix-surreal-starter-types"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.10.2", optional = true }
serde = { version = "1.0.219", features = ["serde_derive"] }
surrealdb = { version = "2.2.2", optional = true }
regex = "1.11.1"
actix-surreal-starter-macros = { path = "../actix-surreal-starter-macros" }
thiserror = "2.0.12"
serde_json = "1.0.140"
derive_more = { version = "2.0.1", features = ["display"] }

[features]
default = []
wasm = []
actix-surreal-impl = ["actix-web", "surrealdb"]