[package]
name = "entities"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-surreal-starter-macros = { path = "../../actix-surreal-starter/actix-surreal-starter-macros" }
phf = { version = "0.11.3", features = ["macros"] }
actix-surreal-starter = { path = "../../actix-surreal-starter", optional = true }
actix-web = { version = "4.10.2", optional = true }
chrono = "0.4.40"
serde = "1.0.219"
surrealdb = "2.2.2"
thiserror = "2.0.12"
serde_json = "1.0.140"

[features]
server = ["actix-surreal-starter", "actix-web"]